remove footer fix pin-digit box shadow clipping

--- a/express-app/public/stylesheets/styles.css
+++ b/express-app/public/stylesheets/styles.css
@@ -1,16 +1,9 @@
-/* Header/Footer Positioning */
-
+/* Main Styling */
 main {
     margin-top: 58px;
     padding-top: 2em;
-}
-
-footer {
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    line-height: 60px;
-    background-color: #f5f5f5;
+    margin-bottom: 1em;
+    padding-bottom: 2em;
 }
 
 section {
@@ -47,4 +40,8 @@ form {
 .pin-digit.is-invalid {
     padding-right: 0.75em;
     background-image: none;
+}
+
+.pin-digit:focus {
+    z-index: 1;
 }
